@@ -1,3 +1,7 @@
+Fri Apr 06 18:10:31 BST 2007  Olly Betts <olly@survex.com>
+
+	* net/remoteconnection.cc: Deal with the exceptional case first.
+
 Fri Apr 06 17:51:20 BST 2007  Olly Betts <olly@survex.com>
 
 	* net/remoteconnection.cc: Use string::append(ptr, size) in preference
